{
    "version": 1,
    "name": "IA_Main",
    "maps": [
        {
            "name": "AM_Player",
            "id": "c13407c4-478d-4367-aa0e-cfffa8be7e41",
            "actions": [
                {
                    "name": "A_Move",
                    "type": "Value",
                    "id": "c8a47dd0-ad66-403d-8fb1-c267089e9405",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "A_Look",
                    "type": "Value",
                    "id": "3f48bd84-8b92-41d4-b042-5de7bb53d7f3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "A_Sprint",
                    "type": "Button",
                    "id": "5d4b8180-9cba-4c72-9f2c-1e1889e0d679",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "A_Jump",
                    "type": "Button",
                    "id": "29d8339e-1691-4d35-af36-460b443b47b2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "a634c1e7-2b81-4c65-ab61-68fede5a3605",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "A_Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7915d08b-8639-4248-9a71-77673e5129d6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A_Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "dc2665c1-36fc-4764-afba-72a1be1c4724",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A_Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a538105a-49d4-4226-8d24-061fcd30913b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A_Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "46d8e8a9-232a-4d8b-b042-740aa0d07197",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A_Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ea9f0a1f-917e-4e67-8969-9621172b3c3d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A_Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3501da07-c9cc-4163-b12f-0f6e7ec29e34",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A_Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3421f190-0404-4973-86a4-052d1fe8959b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A_Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}